--- a/webcreate.html
+++ b/webcreate.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="D:\Pictures\img1.jpg">
     <style>
         body{
-            background-image:url("img.1.jpg");
+            background-image:url("img1.jpg");
             background-size: cover;
         }
     </style>
